courosle is added

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,10 @@
        <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
 	<link href="assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 	<link href="assets/js/datetimepicker/bootstrap-datetimepicker.min.css" rel="stylesheet">
-       <link href="assets/js/owl-carousel/owl.carousel.css" rel="stylesheet">
+	   <link href="assets/js/owl-carousel/owl.carousel.css" rel="stylesheet">
+	   <link rel="stylesheet" type="text/css" href="assets/css/slicktheme/slick.css"/>
+<link rel="stylesheet" type="text/css" href="assets/css/slicktheme/slick-theme.css" />
+
 	<link href="assets/css/themecss/lib.css" rel="stylesheet">
 	<link href="assets/js/jquery-ui/jquery-ui.min.css" rel="stylesheet">
 	
@@ -56,6 +59,7 @@
 ============================================ -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script type="text/javascript" src="assets/js/jquery-2.2.4.min.js"></script>
+<script type="text/javascript" src="assets/css/slicktheme/slick.js"></script>
 <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="assets/js/owl-carousel/owl.carousel.js"></script>
 <script type="text/javascript" src="assets/js/themejs/libs.js"></script>
