--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 	
 	<!-- Favicon
 	============================================ -->
-    <link rel="shortcut icon" href="ico/ico.png">
+	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 	
 	<!-- Google web fonts
 	============================================ -->
