--- a/src/index.html
+++ b/src/index.html
@@ -27,13 +27,13 @@
 	============================================ -->
        <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
 	<link href="assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-	<link href="assets/js/datetimepicker/bootstrap-datetimepicker.min.css" rel="stylesheet">
-	   <link href="assets/js/owl-carousel/owl.carousel.css" rel="stylesheet">
+	<!-- <link href="assets/js/datetimepicker/bootstrap-datetimepicker.min.css" rel="stylesheet">
+	   <link href="assets/js/owl-carousel/owl.carousel.css" rel="stylesheet"> -->
 	   <link rel="stylesheet" type="text/css" href="assets/css/slicktheme/slick.css"/>
 <link rel="stylesheet" type="text/css" href="assets/css/slicktheme/slick-theme.css" />
 
-	<link href="assets/css/themecss/lib.css" rel="stylesheet">
-	<link href="assets/js/jquery-ui/jquery-ui.min.css" rel="stylesheet">
+	<!-- <link href="assets/css/themecss/lib.css" rel="stylesheet">
+	<link href="assets/js/jquery-ui/jquery-ui.min.css" rel="stylesheet"> -->
 	
 	<!-- Theme CSS
 	============================================ -->
@@ -63,14 +63,14 @@
 <script type="text/javascript" src="assets/js/jquery-2.2.4.min.js"></script>
 <script type="text/javascript" src="assets/css/slicktheme/slick.js"></script>
 <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="assets/js/owl-carousel/owl.carousel.js"></script>
+<!-- <script type="text/javascript" src="assets/js/owl-carousel/owl.carousel.js"></script> -->
 <script type="text/javascript" src="assets/js/themejs/libs.js"></script>
-<script type="text/javascript" src="assets/js/unveil/jquery.unveil.js"></script>
+<!-- <script type="text/javascript" src="assets/js/unveil/jquery.unveil.js"></script>
 <script type="text/javascript" src="assets/js/countdown/jquery.countdown.min.js"></script>
 <script type="text/javascript" src="assets/js/dcjqaccordion/jquery.dcjqaccordion.2.8.min.js"></script>
 <script type="text/javascript" src="assets/js/datetimepicker/moment.js"></script>
 <script type="text/javascript" src="assets/js/datetimepicker/bootstrap-datetimepicker.min.js"></script>
-<script type="text/javascript" src="assets/js/jquery-ui/jquery-ui.min.js"></script>
+<script type="text/javascript" src="assets/js/jquery-ui/jquery-ui.min.js"></script> -->
 <script type="text/javascript" src="assets/js/modernizr/modernizr-2.6.2.min.js"></script>
 
 
