--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,11 @@
 <script type="text/javascript" src="assets/js/datetimepicker/bootstrap-datetimepicker.min.js"></script>
 <script type="text/javascript" src="assets/js/jquery-ui/jquery-ui.min.js"></script> -->
 <script type="text/javascript" src="assets/js/modernizr/modernizr-2.6.2.min.js"></script>
-
+<script>
+	$(function(){
+    
+	});
+</script>
 
 <!-- Theme files
 ============================================ -->
